COH-25213 Run tests using module path - remove coherence-testing-data as a transitive dependency of coherence-testing-support (merge main -> ce/main 92344) RQ 	job.9.20220506154542.31997
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 92357]