@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2000, 2022, Oracle and/or its affiliates.
-  ~
-  ~ Licensed under the Universal Permissive License v 1.0 as shown at
-  ~ https://oss.oracle.com/licenses/upl.
+  Copyright (c) 2000, 2022, Oracle and/or its affiliates.
+
+  Licensed under the Universal Permissive License v 1.0 as shown at
+  https://oss.oracle.com/licenses/upl.
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -848,13 +848,6 @@
       <properties>
         <useModulePath>true</useModulePath>
         <bedrockUseModules>true</bedrockUseModules>
-
-        <!-- This is a work-around due to FailSafe putting JUnit jars on both the classpath and module path -->
-        <failsafe.modules.argline>
-          --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
-          --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-          --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-        </failsafe.modules.argline>
       </properties>
       <build>
         <plugins>
